[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/button/bg.png" type="Texture" id=1]
[ext_resource path="res://menu/lobby-menu/ui.gd" type="Script" id=2]
[ext_resource path="res://addons/LANServerBroadcast/server_advertiser/ServerAdvertiser.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/button/bg_press.png" type="Texture" id=5]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -283.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/control/ScrollContainer"]
margin_right = 600.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -209.0
margin_top = -224.0
margin_right = 209.0
margin_bottom = -124.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="TextureButton" parent="CanvasLayer/control/HBoxContainer"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/control/HBoxContainer/play"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 4 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/control/HBoxContainer"]
margin_left = 204.0
margin_right = 214.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="ready" type="TextureButton" parent="CanvasLayer/control/HBoxContainer"]
margin_left = 218.0
margin_right = 418.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/control/HBoxContainer/ready"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 4 )
text = "Ready"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_advertise" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="pressed" from="CanvasLayer/control/HBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/control/HBoxContainer/ready" to="." method="_on_ready_pressed"]
